--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="about-me.css" />
+    <link rel="stylesheet" href="project.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family
       =Roboto:wght@400;500&family=Spinnaker&family=Tenor+Sans&display=swap"
@@ -53,17 +54,13 @@
         </div>
         <div class="fsnav-directory-right"></div>
       </div>
-      <div class="fsnav-lower-menu">lower menu</div>
+      <div class="fsnav-lower-menu">Quick Links</div>
     </div>
     <div class="top-bar">
       <div class="left-section">
         <div class="name-logo">MP</div>
       </div>
       <div class="right-section">
-        <div class="search-button">
-          <img class="search-icon" src="images/search.svg" alt="Error" />
-          <div class="search-text">Search</div>
-        </div>
         <div class="menu-button">
           <img class="menu-icon" src="images/hamburger-menu.svg" alt="Error" />
           <div class="menu-text">Menu</div>
@@ -107,8 +104,52 @@
         </div>
       </div>
     </div>
-    <div class="about-me">about me</div>
+    <div class="about-me">
+      <div class="about-me-header hidden">
+        <div class="about-me-header-container">
+          <div class="about-me-header-text">About Me</div>
+        </div>
+      </div>
+      <div class="about-me-container">
+        <div class="about-main-container hidden">
+          <div class="about-left-section">
+            <div class="about-me-my-name">Hello my name is</div>
+            <div class="about-me-name">Manuel Pena</div>
+            <div class="about-me-description">
+              I am a Sophomore computer science student in the School of
+              Engineering at
+              <a class="tufts-link" href="https://www.tufts.edu/"
+                >Tufts University</a
+              >.
+            </div>
+          </div>
+          <div class="about-right-section">
+            <div class="about-image-container">
+              <img
+                class="about-image"
+                src="images/SOLES Headshots-156.jpg"
+                alt=":o"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="projects">
+      <div class="projects-header">
+        <div class="projects-header-container hidden">
+          <div class="projects-header-text">Projects</div>
+        </div>
+      </div>
+      <div class="projects-grid">
+        <div class="grid-image hidden">1</div>
+        <div class="grid-description hidden">2</div>
+        <div class="grid-image">3</div>
+        <div class="grid-description">4</div>
+      </div>
+    </div>
     <script src="./directory/fsnav.js"></script>
     <script src="./header/header.js"></script>
+    <script src="./scroll-animation.js"></script>
   </body>
 </html>
