--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="about-me-my-name">Hello my name is</div>
             <div class="about-me-name">Manuel Pena</div>
             <div class="about-me-description">
-              I am a Sophomore computer science student in the School of
+              I am a sophomore, computer science student in the School of
               Engineering at
               <a class="tufts-link" href="https://www.tufts.edu/"
                 >Tufts University</a
@@ -136,16 +136,57 @@
       </div>
     </div>
     <div class="projects">
-      <div class="projects-header">
-        <div class="projects-header-container hidden">
+      <div class="projects-header hidden">
+        <div class="projects-header-container">
           <div class="projects-header-text">Projects</div>
         </div>
       </div>
       <div class="projects-grid">
-        <div class="grid-image hidden">1</div>
-        <div class="grid-description hidden">2</div>
-        <div class="grid-image">3</div>
-        <div class="grid-description">4</div>
+        <div class="grid-image hidden">
+          <img
+            class="project-image"
+            src="images/Screen Shot 2023-09-20 at 9.47.16 AM.png"
+            alt="Error"
+          />
+        </div>
+        <div class="grid-description hidden">
+          <h3 class="project-title">Personal Portfolio Website</h3>
+          <ul class="tech-list">
+            <p class="tech-text">Made with:</p>
+            <li class="tech-list-element">
+              <img src="images/icons/icons8-html-48.png" alt="Error" />
+            </li>
+            <li class="tech-list-element">
+              <img src="images/icons/icons8-css-48.png" alt="Error" />
+            </li>
+            <li class="tech-list-element">
+              <img src="images/icons/icons8-javascript-48.png" alt="Error" />
+            </li>
+          </ul>
+          <p class="project-description-text">
+            This is my personal portofolio website which I made using HTML, CSS,
+            and JavaScript. I taught myself how to use these languages.
+          </p>
+        </div>
+        <div class="grid-image hidden">
+          <img
+            class="project-image"
+            src="images/Screen Shot 2023-09-20 at 10.59.31 AM.png"
+            alt="Error"
+          />
+        </div>
+        <div class="grid-description hidden">
+          <h3 class="project-title">Splendor Game</h3>
+          <ul class="tech-list">
+            <p class="tech-text">Made with:</p>
+            <li class="tech-list-element">
+              <img src="images/icons/icons8-c++-48.png" alt="Error" />
+            </li>
+          </ul>
+          <p class="project-description-text">
+            This is the recreation of the board game splendor.
+          </p>
+        </div>
       </div>
     </div>
     <script src="./directory/fsnav.js"></script>
