--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="fsnav-directory-right"></div>
       </div>
-      <div class="fsnav-lower-menu">Quick Links</div>
+      <div class="fsnav-lower-menu"></div>
     </div>
     <div class="top-bar">
       <div class="left-section">
