--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <div class="fsnav-directory">
         <div class="fsnav-directory-left">
           <div class="fsnav-directory-left-grid">
-            <a href="./directory" class="fsnav-link academics">About Me</a>
+            <a href="#" class="fsnav-link academics">About Me</a>
           </div>
           <div class="fsnav-directory-left-grid">
-            <a href="./directory" class="fsnav-link">Projects</a>
+            <a href="#" class="fsnav-link">Projects</a>
           </div>
           <div class="fsnav-directory-left-grid">
-            <a href="./directory" class="fsnav-link info">Contact Info</a>
+            <a href="#" class="fsnav-link info">Contact Info</a>
           </div>
         </div>
         <div class="fsnav-directory-right"></div>
