Added images for freebites and Idea lab(still need to add idea lab section)

--- a/index.html
+++ b/index.html
@@ -140,27 +140,32 @@
         <div class="grid-image hidden">
           <img
             class="project-image"
-            src="images/Screen Shot 2023-09-20 at 9.47.16 AM.png"
+            src="images/freebites_homepage.png"
             alt="Error"
           />
         </div>
         <div class="grid-description hidden">
-          <h3 class="project-title">Personal Portfolio Website</h3>
+          <h3 class="project-title">Freebites</h3>
           <ul class="tech-list">
             <p class="tech-text">Made with:</p>
             <li class="tech-list-element">
-              <img src="images/icons/icons8-html-48.png" alt="Error" />
+              <img src="images/icons/icons8-react-native-48.png" alt="Error" />
             </li>
             <li class="tech-list-element">
-              <img src="images/icons/icons8-css-48.png" alt="Error" />
+              <img src="images/icons/icons8-expo-48.png" alt="Error" />
             </li>
             <li class="tech-list-element">
-              <img src="images/icons/icons8-javascript-48.png" alt="Error" />
+              <img
+                src="images/icons/icons8-mongodb-a-cross-platform-document-oriented-database-program-48.png"
+                alt="Error"
+              />
             </li>
           </ul>
           <p class="project-description-text">
-            This is my personal portofolio website which I made using HTML, CSS,
-            and JavaScript. I taught myself how to use these languages.
+            Full-stack developer for Tufts mobile app that alerts Tufts students
+            of free food opportunities around campus with Tufts Senate funding.
+            Collaborating with team of Tufts developers to build app using Expo
+            with ReactNative, and MongoDB for the back-end.
           </p>
         </div>
         <div class="grid-image hidden">
