Contact info section

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
             </li>
           </ul>
           <p class="project-description-text">
-            Full-stack developer for Tufts mobile app that alerts Tufts students
-            of free food opportunities around campus with Tufts Senate funding.
-            Collaborating with team of Tufts developers to build app using Expo
-            with ReactNative, and MongoDB for the back-end.
+            Full-stack developer for Tufts mobile app that alerts students of
+            free food opportunities around campus with Tufts Senate funding.
+            Collaborating with team of developers to build app using Expo with
+            ReactNative, and MongoDB for the back-end.
           </p>
         </div>
         <div class="grid-image hidden">
@@ -217,7 +217,17 @@
     </div>
     <div id="contact" class="contact">
       <div class="contact-container">
-        <p>This is the contact info.</p>
+        <div class="contact-title">Contact Info</div>
+        <div class="contact-me">
+          <div class="contact-box">
+            email
+            <div class="contact-img">
+              <!-- <img src="images/icons/" alt="Error" /> -->
+            </div>
+          </div>
+          <div class="contact-box">linked in</div>
+          <div class="contact-box">Github</div>
+        </div>
       </div>
     </div>
     <script src="/scripts/fsnav.js"></script>
