--- a/index.html
+++ b/index.html
@@ -216,22 +216,46 @@
       </div>
     </div>
     <div id="contact" class="contact">
-      <div class="contact-container">
-        <div class="contact-title">Contact Info</div>
-        <div class="contact-me">
-          <div class="contact-box">
-            email
-            <div class="contact-img">
-              <!-- <img src="images/icons/" alt="Error" /> -->
+      <div class="contactBackground" id="contactBackground">
+        <div class="contact-container">
+          <div class="contact-title">Contact Info</div>
+          <div class="contact-me">
+            <div class="contact-box">
+              <div class="contact-img">
+                <img
+                  id="email-image"
+                  src="images/icons/icons8-correo-48.png"
+                  alt="Error"
+                />
+              </div>
+            </div>
+            <div class="contact-box">
+              <div class="contact-img">
+                <img
+                  id="linkedIn-image"
+                  src="images/icons/icons8-linkedin-48.png"
+                  alt="Error"
+                />
+              </div>
+            </div>
+            <div class="contact-box">
+              <div class="contact-img">
+                <img
+                  id="GitHub-image"
+                  src="images/icons/icons8-github-48.png"
+                  alt="Error"
+                />
+              </div>
             </div>
           </div>
-          <div class="contact-box">linked in</div>
-          <div class="contact-box">Github</div>
         </div>
       </div>
     </div>
+
     <script src="/scripts/fsnav.js"></script>
     <script src="/scripts/header.js"></script>
     <script src="/scripts/scroll-animation.js"></script>
+    <script src="/scripts/contact-background.js"></script>
+    <script src="/scripts/email.js"></script>
   </body>
 </html>
