made contact section responsive

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
             <div class="contact-box">
               <div class="contact-img">
                 <img
+                  class="contact-images"
                   id="email-image"
                   src="images/icons/icons8-correo-48.png"
                   alt="Error"
@@ -232,6 +233,7 @@
             <div class="contact-box">
               <div class="contact-img">
                 <img
+                  class="contact-images"
                   id="linkedIn-image"
                   src="images/icons/icons8-linkedin-48.png"
                   alt="Error"
@@ -241,6 +243,7 @@
             <div class="contact-box">
               <div class="contact-img">
                 <img
+                  class="contact-images"
                   id="GitHub-image"
                   src="images/icons/icons8-github-48.png"
                   alt="Error"
