Fixed project images hover

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               />
             </li>
           </ul>
-          <p class="project-description-text">
+          <p id="freebites-description" class="project-description-text">
             Full-stack developer for Tufts mobile app that alerts students of
             free food opportunities around campus with Tufts Senate funding.
             Collaborating with team of developers to build app using Expo with
@@ -202,7 +202,7 @@
               <img src="images/icons/icons8-python-48 (1).png" alt="Error" />
             </li>
           </ul>
-          <p class="project-description-text">
+          <p id="face-design-description" class="project-description-text">
             Team Coordinator for the Face Design Project in the Tufts Human
             Factors Idea Lab. The Face Design project uses the Nvidia SyleGAN
             Face Generator to identify a face that you want to display. It
