added idea lab link

--- a/index.html
+++ b/index.html
@@ -203,8 +203,15 @@
             </li>
           </ul>
           <p id="face-design-description" class="project-description-text">
-            Team Coordinator for the Face Design Project in the Tufts Human
-            Factors Idea Lab. The Face Design project uses the Nvidia SyleGAN
+            Team Coordinator for the Face Design Project in the 
+            <a
+                id="tufts-link"
+                class="tufts-link"
+                style="color: black;"
+                href="https://sites.tufts.edu/idea/"
+                >Tufts Human Factors Idea Lab
+            </a>. 
+            The Face Design project uses the Nvidia SyleGAN
             Face Generator to identify a face that you want to display. It
             displays an array of nine faces and iterate through the faces that
             looks most familiar until you get the face you want. My role as team
